minor style issue on mobile reponsive

--- a/src/assets/styles/custom.css
+++ b/src/assets/styles/custom.css
@@ -24,6 +24,13 @@
   appearance: unset;
 }
 
+@media (max-width: 767px) {
+  [type='time'],
+  [type='party'] {
+    background-size: 12%;
+  }
+}
+
 [type='date']::-webkit-inner-spin-button,
 [type='time']::-webkit-inner-spin-button {
   display: none;
